force-app/main/default/objects/VolunteerContactTag__c/VolunteerContactTag__c.object-meta.xml
<CustomObject>
    <description>This is for Disclosure and misconduct of volunteer to include Tags</description>
    <label>VolunteerContactTag</label>
    <nameField>
        <displayFormat>TG-{0000}</displayFormat>
        <label>VolunteerContactTag Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>VolunteerContactTags</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>