force-app/main/default/objects/VolunteerContactTag__c/fields/Contact_Name__c.field-meta.xml
<CustomField>
    <fullName>Contact_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>User contact or any other volunteer contact</description>
    <label>Contact Name</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.RecordTypeId</field>
            <operation>notEqual</operation>
            <value>Donor, Orphan</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Disclosure</relationshipLabel>
    <relationshipName>VolunteerContactTags1</relationshipName>
    <type>Lookup</type>
</CustomField>