force-app/main/default/objects/VolunteerContactTag__c/fields/Detail_Notes__c.field-meta.xml
<CustomField>
    <fullName>Detail_Notes__c</fullName>
    <description>Detail information for Misconduct &amp; Disclosure</description>
    <label>Detail Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>