force-app/main/default/objects/VolunteerContactTag__c/fields/Volunteer_ID__c.field-meta.xml
<CustomField>
    <fullName>Volunteer_ID__c</fullName>
    <description>Link to volunteer contact</description>
    <label>Volunteer ID</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Disclosure &amp; Misconduct</relationshipLabel>
    <relationshipName>VolunteerContactTags</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>